[package]
name = "mtime"
description = "Unix time like library on Rust"
authors = ["ArZarLordOfMango", "Nebagibuappu"]
version = "1.1.4"

[lib]
name = "mtime"

[[test]]
name = "mtime"
path = "tests/test.rs"

[examples]
example0 = "examples/example0.rs"
example1 = "examples/example1.rs"
example2 = "examples/example2.rs"

[dependencies]
